<resources>
    <string name="app_name">meetSB</string>
    <string name="personal_description">Passionate hair style designer seeking intern or full time job as senior hair dressor</string>
    <string name="class_list">HSD100, HSD110, HW11, HC140, HC140L</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dont_have_account"><u>Don\'t have an account? Sign up here.</u></string>
    <string name="already_have_account"><u>Already have an account? Sign in here.</u></string>
    <string-array name="major_array">
        <item>Computer Science</item>
        <item>Mathemetics</item>
        <item>Biology</item>
        <item>Music</item>
        <item>Economics</item>
        <item>MathEcon</item>
        <item>Literature</item>
        <item>Others</item>
    </string-array>

    <string name="major_prompt">Choose a major</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="gender_prompt">Choose a gender</string>

    <string-array name="class_array">
        <item>CSE110</item>
        <item>CSE105</item>
        <item>CSE158</item>
        <item>CSE101</item>
        <item>CSE140</item>
        <item>CSE140L</item>
        <item>CSE120</item>
        <item>CSE130</item>
        <item>ECON1</item>
        <item>ECON2</item>
        <item>ECON120A</item>
        <item>Team SB</item>
    </string-array>

    <string name="class_prompt">What class are you taking</string>
    <string name="title_activity_other_profile">OtherProfileActivity</string>
    <string name="title_activity_ohter_user">OhterUserActivity</string>

</resources>

