<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <ImageButton
        android:id="@+id/setting_pic_input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/setting_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Username"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/setting_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Enter Description"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/setting_gpa_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Enter GPA"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/setting_major_input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:entries="@array/major_array"
            android:prompt="@string/major_prompt" />

        <Spinner
            android:id="@+id/setting_gender_input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:entries="@array/gender_array"
            android:prompt="@string/gender_prompt" />

        <Spinner
            android:id="@+id/setting_class_input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:entries="@array/class_array"
            android:prompt="@string/class_prompt" />
    </LinearLayout>

    <Button
        android:id="@+id/setting_button_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="SUBMIT"
        android:textColor="#B2B1B3"
        android:textSize="30sp" />

</LinearLayout>